Fixed header alignment

--- a/src/app/shared/sub-title-bar/sub-title-bar.component.css
+++ b/src/app/shared/sub-title-bar/sub-title-bar.component.css
@@ -10,6 +10,7 @@ mat-toolbar > div {
 mat-toolbar > div:nth-child(2) {
   display: flex;
   justify-content: center;
+  align-items: center;
 }
 
 mat-toolbar > div:last-child {
